# learning-openapi

./: .gitignore  README.md  index.py  index.ts  openapi.json  openapi.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
api/: $api.ts
api/pets/: $api.ts  index.ts
api/users/: $api.ts  index.ts
components/: pet.yml  pets.yml
components/paths/: pets.yml  users.yml
controllers/: pets.py  users.py  users2.py
