[tool.poetry]
name = "learning_openapi"
version = "0.1.0"
description = ""
authors = ["Daichi Imamori <aidy.91614@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
connexion = {extras = ["swagger-ui"], version = "^2.7.0"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
